--- a/package.json
+++ b/package.json
@@ -7,47 +7,47 @@
   },
   "license": "Apache-2.0",
   "scripts": {
-    "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
+    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "start:frontend": "ng serve --aot --proxy-config aio/proxy.conf.json",
+    "start:backend": "gulp serve --kubeconfig $npm_package_config_kubeconfig",
     "start:prod": "npm run build && ./$npm_package_config_dashboard_binary_path --kubeconfig $npm_package_config_kubeconfig",
-    "start-frontend": "ng serve --aot --proxy-config aio/proxy.conf.json",
-    "start-backend": "gulp serve --kubeconfig $npm_package_config_kubeconfig",
-    "start-cluster": "./aio/scripts/start-cluster.sh",
     "build": "./aio/scripts/build.sh",
     "build:cross": "./aio/scripts/build.sh -c",
-    "build:docker:cross": "npm run build:cross && gulp docker-image:release:cross",
-    "build:docker:head": "npm run build && gulp docker-image:head",
-    "build:docker:head:cross": "npm run build:cross && gulp docker-image:head:cross",
-    "build-frontend": "npm run clean && ng build --aot --prod --outputPath=$npm_package_config_frontend_build_dir",
-    "build-backend": "npm run clean && gulp backend:prod",
-    "build-backend:cross": "npm run clean && gulp backend:prod:cross",
-    "docker-push:head:cross": "npm run build:docker:head:cross && gulp push-to-docker:head:cross",
-    "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
-    "format:check": "concurrently \"npm run format-code:check\" \"npm run format-styles:check\" \"npm run format-html:check\"",
-    "format-frontend": "npm run format-code && npm run format-html && npm run format-styles",
-    "format-code": "./aio/scripts/format.sh --code",
-    "format-code:check": "./aio/scripts/format.sh --code --check",
-    "format-html": "./aio/scripts/format.sh --html",
-    "format-html:check": "./aio/scripts/format.sh --html --check",
-    "format-styles": "./aio/scripts/format.sh --styles",
-    "format-styles:check": "./aio/scripts/format.sh --styles --check",
-    "format-backend": "goimports -w src/app/backend",
-    "check": "npm run check-licenses && npm run format:check && npm run lint && npm run test && npm run e2e",
-    "check:code-quality": "npm run check-licenses && npm run format:check && npm run lint && npm run test-with-coverage",
-    "check-licenses": "gulp check-license-headers",
-    "lint": "npm run lint-frontend && npm run lint-backend",
-    "lint-frontend": "npm run lint-ts && npm run lint-sass",
-    "lint-ts": "tslint -c tslint.json --project . -t codeFrame",
-    "lint-sass": "./node_modules/sass-lint/bin/sass-lint.js -c .sass-lint.yml 'src/app/frontend/**/*.scss' -v -q",
-    "lint-backend": "./aio/scripts/lint-backend.sh",
-    "test": "npm run test-frontend && npm run test-backend",
-    "test-with-coverage": "npm run test-frontend && npm run coverage-backend",
-    "test-frontend": "ng test --config aio/karma.conf.js --single-run",
-    "test-frontend:watch": "ng test --config aio/karma.conf.js",
-    "test-backend": "go test github.com/kubernetes/dashboard/src/app/backend/...",
-    "coverage-backend": "./aio/scripts/coverage-backend.sh coverage/go.txt",
+    "build:frontend": "npm run clean && ng build --aot --prod --outputPath=$npm_package_config_frontend_build_dir",
+    "build:backend": "npm run clean && gulp backend:prod",
+    "build:backend:cross": "npm run clean && gulp backend:prod:cross",
+    "docker:build:cross": "npm run build:cross && gulp docker-image:release:cross",
+    "docker:build:head": "npm run build && gulp docker-image:head",
+    "docker:build:head:cross": "npm run build:cross && gulp docker-image:head:cross",
+    "docker:push:head:cross": "npm run docker:build:head:cross && gulp push-to-docker:head:cross",
+    "test": "npm run test:frontend && npm run test:backend",
+    "test:frontend": "ng test --config aio/karma.conf.js --single-run",
+    "test:frontend:watch": "ng test --config aio/karma.conf.js",
+    "test:backend": "go test github.com/kubernetes/dashboard/src/app/backend/...",
+    "test:backend:coverage": "./aio/scripts/coverage-backend.sh coverage/go.txt",
+    "test:coverage": "npm run test:frontend && npm run test:backend:coverage",
+    "test:full": "npm run check && npm run test && npm run e2e",
     "e2e": "ng e2e",
+    "cluster": "./aio/scripts/start-cluster.sh",
+    "check": "npm run check:license && npm run check:format && npm run lint",
+    "check:license": "gulp check-license-headers",
+    "check:format": "concurrently \"npm run check:format:code\" \"npm run check:format:styles\" \"npm run check:format:html\"",
+    "check:format:code": "./aio/scripts/format.sh --code --check",
+    "check:format:styles": "./aio/scripts/format.sh --styles --check",
+    "check:format:html": "./aio/scripts/format.sh --html --check",
+    "lint": "npm run lint:frontend && npm run lint:backend",
+    "lint:frontend": "npm run lint:frontend:code && npm run lint:frontend:styles",
+    "lint:frontend:code": "tslint -c tslint.json --project . -t codeFrame",
+    "lint:frontend:styles": "./node_modules/sass-lint/bin/sass-lint.js -c .sass-lint.yml 'src/app/frontend/**/*.scss' -v -q",
+    "lint:backend": "./aio/scripts/lint-backend.sh",
+    "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
+    "format:frontend": "npm run format-code && npm run format-html && npm run format-styles",
+    "format:frontend:code": "./aio/scripts/format.sh --code",
+    "format:frontend:styles": "./aio/scripts/format.sh --styles",
+    "format:frontend:html": "./aio/scripts/format.sh --html",
+    "format:backend": "goimports -w src/app/backend",
+    "postinstall": "webdriver-manager update",
     "clean": "rm -rf .go_workspace .tmp .tools coverage dist npm-debug.log",
-    "postinstall": "webdriver-manager update"
   },
   "dependencies": {
     "@angular/animations": "^5.1.3",
