--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "test:backend": "go test github.com/kubernetes/dashboard/src/app/backend/...",
     "test:backend:coverage": "./aio/scripts/coverage-backend.sh coverage/go.txt",
     "test:coverage": "npm run test:frontend && npm run test:backend:coverage",
-    "test:full": "npm run check && npm run test && npm run e2e",
     "e2e": "ng e2e",
     "cluster": "./aio/scripts/start-cluster.sh",
-    "check": "npm run check:license && npm run check:format && npm run lint",
+    "check": "npm run check:static && npm run test && npm run e2e",
+    "check:static": "npm run check:license && npm run check:format && npm run lint",
     "check:license": "gulp check-license-headers",
     "check:format": "concurrently \"npm run check:format:code\" \"npm run check:format:styles\" \"npm run check:format:html\"",
     "check:format:code": "./aio/scripts/format.sh --code --check",
