Remove redundant scripts

--- a/package.json
+++ b/package.json
@@ -41,10 +41,7 @@
     "lint:frontend:styles": "./node_modules/sass-lint/bin/sass-lint.js -c .sass-lint.yml 'src/app/frontend/**/*.scss' -v -q",
     "lint:backend": "./aio/scripts/lint-backend.sh",
     "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
-    "format:frontend": "npm run format-code && npm run format-html && npm run format-styles",
-    "format:frontend:code": "./aio/scripts/format.sh --code",
-    "format:frontend:styles": "./aio/scripts/format.sh --styles",
-    "format:frontend:html": "./aio/scripts/format.sh --html",
+    "format:frontend": "./aio/scripts/format.sh --code --styles --html",
     "format:backend": "goimports -w src/app/backend",
     "postinstall": "webdriver-manager update",
     "clean": "rm -rf .go_workspace .tmp .tools coverage dist npm-debug.log",
