--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "docker:build:head": "npm run build && gulp docker-image:head",
     "docker:build:head:cross": "npm run build:cross && gulp docker-image:head:cross",
     "docker:push:head:cross": "npm run docker:build:head:cross && gulp push-to-docker:head:cross",
-    "test": "npm run test:frontend && npm run test:backend",
+    "test": "npm run test:frontend && npm run test:backend && npm run test:e2e",
     "test:frontend": "ng test --config aio/karma.conf.js --single-run",
     "test:frontend:watch": "ng test --config aio/karma.conf.js",
     "test:backend": "go test github.com/kubernetes/dashboard/src/app/backend/...",
     "test:backend:coverage": "./aio/scripts/coverage-backend.sh coverage/go.txt",
     "test:coverage": "npm run test:frontend && npm run test:backend:coverage",
-    "e2e": "ng e2e",
+    "test:e2e": "ng e2e",
     "cluster": "./aio/scripts/start-cluster.sh",
-    "check": "npm run check:static && npm run test && npm run e2e",
+    "check": "npm run check:static && npm run test && npm run test:e2e",
     "check:static": "npm run check:license && npm run check:format && npm run lint",
     "check:license": "gulp check-license-headers",
     "check:format": "concurrently \"npm run check:format:code\" \"npm run check:format:styles\" \"npm run check:format:html\"",
