--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "docker:push:head:cross": "npm run docker:build:head:cross && gulp push-to-docker:head:cross",
     "test": "npm run test:frontend && npm run test:backend && npm run test:e2e",
     "test:frontend": "ng test --config aio/karma.conf.js --single-run",
+    "test:frontend:coverage": "ng test --config aio/karma.conf.js --single-run --code-coverage",
     "test:frontend:watch": "ng test --config aio/karma.conf.js",
     "test:backend": "go test github.com/kubernetes/dashboard/src/app/backend/...",
     "test:backend:coverage": "./aio/scripts/coverage-backend.sh coverage/go.txt",
-    "test:coverage": "npm run test:frontend && npm run test:backend:coverage",
+    "test:coverage": "npm run test:frontend:coverage && npm run test:backend:coverage",
     "test:e2e": "ng e2e",
     "cluster": "./aio/scripts/start-cluster.sh",
     "check": "npm run check:static && npm run test && npm run test:e2e",
@@ -94,10 +95,10 @@
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage": "^1.1.1",
-    "karma-coverage-istanbul-reporter": "~1.3.3",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "~0.2.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "lite-server": "2.3.0",
     "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
